scripts/nullaway/annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8.txt
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Rhythmic_Block.java:119: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return rhythmicValues;
		^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Tonality.java:29: error: [NullAway] initializer method does not guarantee @NonNull field relatedKeys (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Tonality(Key k, int i) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Key.java:70: error: [NullAway] initializer method does not guarantee @NonNull fields relativeMinor (line 43), chord (line 50) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Key(int oct0, int oct1, int oct2, 
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:95: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 86), octaves (line 88) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Scale(int root, int interval2, int interval3, 
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:105: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 86), octaves (line 88) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Scale(int root, int interval2, int interval3, 
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:116: error: [NullAway] initializer method does not guarantee @NonNull fields wholeScale (line 86), octaves (line 88) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Scale(int root, int interval2, int interval3, 
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/Scale.java:158: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return key;
		^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/DesiredLoudness.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields allDynamics (line 20), howCloseAreTheDynamics (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DesiredLoudness(Dynamic d) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/expert_system/DesiredLoudness.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields allDynamics (line 20), howCloseAreTheDynamics (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DesiredLoudness(Dynamic d, DynamicShape ds) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:66: error: [NullAway] initializer method does not guarantee @NonNull fields phrase (line 38), allKeys (line 48), allScales (line 49), allDynamics (line 50), allDynamicShapes (line 51), allRhythms (line 52), scaleGene (line 56), dynamicGene (line 57), dshapeGene (line 58), rhythmGenes (line 59) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Chromosome(){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:73: error: [NullAway] initializer method does not guarantee @NonNull fields phrase (line 38), allKeys (line 48), allScales (line 49), allDynamics (line 50), allDynamicShapes (line 51), allRhythms (line 52), scaleGene (line 56), dynamicGene (line 57), dshapeGene (line 58) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Chromosome(int _min , int _max) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:88: error: [NullAway] initializer method does not guarantee @NonNull fields phrase (line 38), allKeys (line 48), allScales (line 49), allDynamics (line 50), allDynamicShapes (line 51), allRhythms (line 52), dynamicGene (line 57), dshapeGene (line 58) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Chromosome(int _min , int _max, @Nullable Key k, Scale s) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Chromosome.java:100: error: [NullAway] read of @NonNull field scaleGene before initialization
		this.scaleGene.initialise  (this.keyGene);
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/Phrase.java:40: error: [NullAway] initializer method does not guarantee @NonNull field musicalPhrase (line 34) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Phrase(int min, int max, Scale s, Dynamic d, DynamicShape ds, ArrayList <Rhythmic_Block> arr) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:106: error: [NullAway] enhanced-for expression k.getChord().getScales() is @Nullable
				for(Scale s :k.getChord().getScales()){
				                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/algorithms_and_systems_AI_Evolutionary/GeneticAlgorithm.java:139: error: [NullAway] dereferenced expression this.targetFeel is @Nullable
		ArrayList <Rhythmic_Block> fitRhythms = this.targetFeel.getFitRhythms();
		                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url79d4f7c7ed_schanq_Live_Algorithm_tgz-pJ8-algorithms_and_systems_AI_Evolutionary_GeneticAlgorithmJ8/src/networking/OSCClient.java:52: error: [NullAway] initializer method does not guarantee @NonNull fields noteValues (line 33), velocityValues (line 34), millisValues (line 35), theFuzzySystem (line 44) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public OSCClient() {
	       ^
    (see http://t.uber.com/nullaway )
17 errors
